might revert to previous, now high scores is formatted correctly but quiz alignment is off

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,8 +63,10 @@ input {
 }
 
 /* .container-scores{
-    display: inline;
-    margin: auto;
     align-items: center;
-    justify-items: flex-start;
+    border: 1px solid black;
+    padding-right: 100px;
+    padding-left: 28px;
+    width: 50px;
+    border-radius: 5px;
 } */
